<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="100dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            style="@style/device_text_type_style"
            android:text="@string/media_input_type" />

        <TextView
            android:id="@+id/media_input_type_result"
            style="@style/device_text_type_style"
            android:layout_marginLeft="50dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="100dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            style="@style/device_text_type_style"
            android:text="@string/use_type" />

        <TextView
            android:id="@+id/use_status_result"
            style="@style/device_text_type_style"
            android:layout_marginLeft="50dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="100dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            style="@style/device_text_type_style"
            android:text="@string/frame_bps" />

        <TextView
            android:id="@+id/frame_bps_result"
            style="@style/device_text_type_style"
            android:layout_marginLeft="50dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="100dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            style="@style/device_text_type_style"
            android:text="@string/current_fbps" />

        <TextView
            android:id="@+id/current_fbps_result"
            style="@style/device_text_type_style"
            android:layout_marginLeft="50dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/decoding_px_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="100dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            style="@style/device_text_type_style"
            android:text="@string/max_fbps" />

        <TextView
            android:id="@+id/max_fbps_result"
            style="@style/device_text_type_style"
            android:layout_marginLeft="50dp" />
    </LinearLayout>
</LinearLayout>
